Revert "TE-363 - fixed task label vertical aligning for 'create task' state"
This reverts commit 0219c8584f1f9da6a1c8b33a0d121ebdebe6c409.

--- a/src/css/popup.less
+++ b/src/css/popup.less
@@ -405,8 +405,6 @@ input {
 
     &.task {
         .form-control {
-            display: block;
-            height: auto !important;
             border: 0;
         }
     }
